fix bar wrapping and last-child gutter

--- a/app/styles/modules/_bar.scss
+++ b/app/styles/modules/_bar.scss
@@ -1,7 +1,7 @@
 @mixin bar {
   display: flex;
   flex-flow: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   align-items: center;
 }
 
@@ -13,10 +13,6 @@
 
   > * {
     margin-bottom: 0;
-  }
-
-  &:last-child {
-    margin-right: 0;
   }
 }
 
@@ -67,6 +63,10 @@
         @each $breakpoint, $space in _get-breakpoint-map($props) {
           @include breakpoint($breakpoint) { // stylelint-disable
             margin-right: $space;
+
+            &:last-child {
+              margin-right: 0;
+            }
           }
         }
       }
